// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RN Codegen Flow Parser Fails with error message NATIVE_MODULES_WITH_ARRAY_WITH_NO_TYPE_FOR_CONTENT 1`] = `"Module SampleTurboModule: Detected a type of Array, without type parameters."`;

exports[`RN Codegen Flow Parser Fails with error message NATIVE_MODULES_WITH_ARRAY_WITH_NO_TYPE_FOR_CONTENT_AS_PARAM 1`] = `"Module SampleTurboModule: Detected a type of Array, without type parameters."`;

exports[`RN Codegen Flow Parser Fails with error message NATIVE_MODULES_WITH_NOT_ONLY_METHODS 1`] = `"Only methods are supported as module properties. Found BooleanTypeAnnotation in sampleBool"`;

exports[`RN Codegen Flow Parser Fails with error message NATIVE_MODULES_WITH_PROMISE_WITHOUT_TYPE 1`] = `"Module SampleTurboModule: Detected a type of Promise, without type parameters."`;

exports[`RN Codegen Flow Parser Fails with error message NATIVE_MODULES_WITH_READ_ONLY_OBJECT_NO_TYPE_FOR_CONTENT 1`] = `"Module SampleTurboModule: Detected a type of $ReadOnly, with 0 type parameters specified. Expected exactly 1."`;

exports[`RN Codegen Flow Parser Fails with error message NATIVE_MODULES_WITH_UNNAMED_PARAMS 1`] = `"Module SampleTurboModule: Detected a FunctionTypeAnnotation with an unnamed param. Please name all params."`;

exports[`RN Codegen Flow Parser Fails with error message TWO_NATIVE_EXTENDING_TURBO_MODULE 1`] = `"File contains declarations of more than one module: Spec, Spec2. Please declare exactly one module in this file."`;

exports[`RN Codegen Flow Parser Fails with error message TWO_NATIVE_MODULES_EXPORTED_WITH_DEFAULT 1`] = `"File neither contains a module declaration, nor a component declaration. For module declarations, please make sure your file has an InterfaceDeclaration extending TurboModule. For component declarations, please make sure your file has a default export calling the codegenNativeComponent<Props>(...) macro."`;

exports[`RN Codegen Flow Parser can generate fixture EMPTY_NATIVE_MODULE 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: { SampleTurboModule: { aliases: {}, properties: [] } }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_ALIASES 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {
            ObjectAlias: {
              type: 'ObjectTypeAnnotation',
              properties: [
                {
                  name: 'x',
                  optional: false,
                  typeAnnotation: { type: 'NumberTypeAnnotation' }
                },
                {
                  name: 'y',
                  optional: false,
                  typeAnnotation: { type: 'NumberTypeAnnotation' }
                },
                {
                  name: 'label',
                  optional: false,
                  typeAnnotation: { type: 'StringTypeAnnotation' }
                },
                {
                  name: 'truthy',
                  optional: false,
                  typeAnnotation: { type: 'BooleanTypeAnnotation' }
                }
              ]
            }
          },
          properties: [
            {
              name: 'getNumber',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: { type: 'NumberTypeAnnotation' }
                  }
                ]
              }
            },
            {
              name: 'getVoid',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: []
              }
            },
            {
              name: 'getArray',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ObjectTypeAnnotation',
                  properties: [
                    {
                      name: 'a',
                      optional: false,
                      typeAnnotation: { type: 'NumberTypeAnnotation' }
                    }
                  ]
                },
                params: [
                  {
                    name: 'a',
                    optional: false,
                    typeAnnotation: {
                      type: 'ArrayTypeAnnotation',
                      elementType: { type: 'NumberTypeAnnotation' }
                    }
                  }
                ]
              }
            },
            {
              name: 'getStringFromAlias',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'StringTypeAnnotation' },
                params: [
                  {
                    name: 'a',
                    optional: false,
                    typeAnnotation: {
                      type: 'TypeAliasTypeAnnotation',
                      name: 'ObjectAlias'
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_ARRAY_WITH_ALIAS 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getArray',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ArrayTypeAnnotation',
                  elementType: { type: 'StringTypeAnnotation' }
                },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'ArrayTypeAnnotation',
                      elementType: { type: 'StringTypeAnnotation' }
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_ARRAY_WITH_UNION_AND_TOUPLE 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getArray',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'ArrayTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: { type: 'ArrayTypeAnnotation' }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_BASIC_ARRAY 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getArray',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ArrayTypeAnnotation',
                  elementType: { type: 'StringTypeAnnotation' }
                },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'ArrayTypeAnnotation',
                      elementType: { type: 'StringTypeAnnotation' }
                    }
                  }
                ]
              }
            },
            {
              name: 'getArray',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ArrayTypeAnnotation',
                  elementType: { type: 'StringTypeAnnotation' }
                },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'ArrayTypeAnnotation',
                      elementType: { type: 'StringTypeAnnotation' }
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_BASIC_PARAM_TYPES 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'passBool',
              optional: true,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: { type: 'BooleanTypeAnnotation' }
                  }
                ]
              }
            },
            {
              name: 'passNumber',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: { type: 'NumberTypeAnnotation' }
                  }
                ]
              }
            },
            {
              name: 'passString',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: { type: 'StringTypeAnnotation' }
                  }
                ]
              }
            },
            {
              name: 'passStringish',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: { type: 'StringTypeAnnotation' }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_CALLBACK 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getValueWithCallback',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: [
                  {
                    name: 'callback',
                    optional: false,
                    typeAnnotation: {
                      type: 'FunctionTypeAnnotation',
                      returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                      params: [
                        {
                          name: 'value',
                          optional: false,
                          typeAnnotation: { type: 'StringTypeAnnotation' }
                        },
                        {
                          name: 'arr',
                          optional: false,
                          typeAnnotation: {
                            type: 'ArrayTypeAnnotation',
                            elementType: {
                              type: 'ArrayTypeAnnotation',
                              elementType: { type: 'StringTypeAnnotation' }
                            }
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_COMPLEX_ARRAY 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getArray',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ArrayTypeAnnotation',
                  elementType: {
                    type: 'ArrayTypeAnnotation',
                    elementType: {
                      type: 'ArrayTypeAnnotation',
                      elementType: { type: 'StringTypeAnnotation' }
                    }
                  }
                },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'ArrayTypeAnnotation',
                      elementType: {
                        type: 'ArrayTypeAnnotation',
                        elementType: {
                          type: 'ArrayTypeAnnotation',
                          elementType: {
                            type: 'ArrayTypeAnnotation',
                            elementType: {
                              type: 'ArrayTypeAnnotation',
                              elementType: { type: 'StringTypeAnnotation' }
                            }
                          }
                        }
                      }
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_COMPLEX_OBJECTS 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getObject',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ObjectTypeAnnotation',
                  properties: [
                    {
                      name: 'const1',
                      optional: false,
                      typeAnnotation: {
                        type: 'ObjectTypeAnnotation',
                        properties: [
                          {
                            name: 'const1',
                            optional: false,
                            typeAnnotation: { type: 'BooleanTypeAnnotation' }
                          }
                        ]
                      }
                    }
                  ]
                },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'ObjectTypeAnnotation',
                      properties: [
                        {
                          name: 'const1',
                          optional: false,
                          typeAnnotation: {
                            type: 'ObjectTypeAnnotation',
                            properties: [
                              {
                                name: 'const1',
                                optional: false,
                                typeAnnotation: { type: 'BooleanTypeAnnotation' }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              name: 'getReadOnlyObject',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ObjectTypeAnnotation',
                  properties: [
                    {
                      name: 'const1',
                      optional: false,
                      typeAnnotation: {
                        type: 'ObjectTypeAnnotation',
                        properties: [
                          {
                            name: 'const1',
                            optional: false,
                            typeAnnotation: { type: 'BooleanTypeAnnotation' }
                          }
                        ]
                      }
                    }
                  ]
                },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'ObjectTypeAnnotation',
                      properties: [
                        {
                          name: 'const1',
                          optional: false,
                          typeAnnotation: {
                            type: 'ObjectTypeAnnotation',
                            properties: [
                              {
                                name: 'const1',
                                optional: false,
                                typeAnnotation: { type: 'BooleanTypeAnnotation' }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              name: 'getObject2',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'GenericObjectTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'ObjectTypeAnnotation',
                      properties: [
                        {
                          name: 'a',
                          optional: false,
                          typeAnnotation: { type: 'StringTypeAnnotation' }
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              name: 'getObjectInArray',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ArrayTypeAnnotation',
                  elementType: {
                    type: 'ObjectTypeAnnotation',
                    properties: [
                      {
                        name: 'const1',
                        optional: false,
                        typeAnnotation: {
                          type: 'ObjectTypeAnnotation',
                          properties: [
                            {
                              name: 'const1',
                              optional: false,
                              typeAnnotation: { type: 'BooleanTypeAnnotation' }
                            }
                          ]
                        }
                      }
                    ]
                  }
                },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'ObjectTypeAnnotation',
                      properties: [
                        {
                          name: 'const1',
                          optional: false,
                          typeAnnotation: {
                            type: 'ObjectTypeAnnotation',
                            properties: [
                              {
                                name: 'const1',
                                optional: false,
                                typeAnnotation: { type: 'BooleanTypeAnnotation' }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_COMPLEX_OBJECTS_WITH_NULLABLE_KEY 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getConstants',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ObjectTypeAnnotation',
                  properties: [
                    {
                      name: 'isTesting',
                      optional: false,
                      typeAnnotation: { type: 'BooleanTypeAnnotation' }
                    },
                    {
                      name: 'reactNativeVersion',
                      optional: false,
                      typeAnnotation: {
                        type: 'ObjectTypeAnnotation',
                        properties: [
                          {
                            name: 'major',
                            optional: false,
                            typeAnnotation: { type: 'NumberTypeAnnotation' }
                          },
                          {
                            name: 'minor',
                            optional: false,
                            typeAnnotation: { type: 'NumberTypeAnnotation' }
                          },
                          {
                            name: 'patch',
                            optional: true,
                            typeAnnotation: { type: 'NumberTypeAnnotation' }
                          },
                          {
                            name: 'prerelease',
                            optional: false,
                            typeAnnotation: {
                              type: 'NullableTypeAnnotation',
                              typeAnnotation: { type: 'NumberTypeAnnotation' }
                            }
                          }
                        ]
                      }
                    },
                    {
                      name: 'forceTouchAvailable',
                      optional: false,
                      typeAnnotation: { type: 'BooleanTypeAnnotation' }
                    },
                    {
                      name: 'osVersion',
                      optional: false,
                      typeAnnotation: { type: 'StringTypeAnnotation' }
                    },
                    {
                      name: 'systemName',
                      optional: false,
                      typeAnnotation: { type: 'StringTypeAnnotation' }
                    },
                    {
                      name: 'interfaceIdiom',
                      optional: false,
                      typeAnnotation: { type: 'StringTypeAnnotation' }
                    }
                  ]
                },
                params: []
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_FLOAT_AND_INT32 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getInt',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'Int32TypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: { type: 'Int32TypeAnnotation' }
                  }
                ]
              }
            },
            {
              name: 'getFloat',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'FloatTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: { type: 'FloatTypeAnnotation' }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_NESTED_ALIASES 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {
            Bar: {
              type: 'ObjectTypeAnnotation',
              properties: [
                {
                  name: 'z',
                  optional: false,
                  typeAnnotation: { type: 'NumberTypeAnnotation' }
                }
              ]
            },
            Foo: {
              type: 'ObjectTypeAnnotation',
              properties: [
                {
                  name: 'bar1',
                  optional: false,
                  typeAnnotation: { type: 'TypeAliasTypeAnnotation', name: 'Bar' }
                },
                {
                  name: 'bar2',
                  optional: false,
                  typeAnnotation: { type: 'TypeAliasTypeAnnotation', name: 'Bar' }
                }
              ]
            }
          },
          properties: [
            {
              name: 'foo1',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'TypeAliasTypeAnnotation', name: 'Foo' },
                params: [
                  {
                    name: 'x',
                    optional: false,
                    typeAnnotation: { type: 'TypeAliasTypeAnnotation', name: 'Foo' }
                  }
                ]
              }
            },
            {
              name: 'foo2',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: [
                  {
                    name: 'x',
                    optional: false,
                    typeAnnotation: { type: 'TypeAliasTypeAnnotation', name: 'Foo' }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_NULLABLE_PARAM 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'voidFunc',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'VoidTypeAnnotation' },
                params: [
                  {
                    name: 'arg',
                    optional: false,
                    typeAnnotation: {
                      type: 'NullableTypeAnnotation',
                      typeAnnotation: { type: 'StringTypeAnnotation' }
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_OBJECT_WITH_OBJECT_DEFINED_IN_FILE_AS_PROPERTY 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {
            DisplayMetricsAndroid: {
              type: 'ObjectTypeAnnotation',
              properties: [
                {
                  name: 'width',
                  optional: false,
                  typeAnnotation: { type: 'NumberTypeAnnotation' }
                }
              ]
            }
          },
          properties: [
            {
              name: 'getConstants',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ObjectTypeAnnotation',
                  properties: [
                    {
                      name: 'Dimensions',
                      optional: false,
                      typeAnnotation: {
                        type: 'ObjectTypeAnnotation',
                        properties: [
                          {
                            name: 'windowPhysicalPixels',
                            optional: false,
                            typeAnnotation: {
                              type: 'TypeAliasTypeAnnotation',
                              name: 'DisplayMetricsAndroid'
                            }
                          }
                        ]
                      }
                    }
                  ]
                },
                params: []
              }
            },
            {
              name: 'getConstants2',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ObjectTypeAnnotation',
                  properties: [
                    {
                      name: 'Dimensions',
                      optional: false,
                      typeAnnotation: {
                        type: 'ObjectTypeAnnotation',
                        properties: [
                          {
                            name: 'windowPhysicalPixels',
                            optional: false,
                            typeAnnotation: {
                              type: 'TypeAliasTypeAnnotation',
                              name: 'DisplayMetricsAndroid'
                            }
                          }
                        ]
                      }
                    }
                  ]
                },
                params: []
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_PROMISE 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getValueWithPromise',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'PromiseTypeAnnotation' },
                params: []
              }
            },
            {
              name: 'getValueWithPromiseDefinedSomewhereElse',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'PromiseTypeAnnotation' },
                params: []
              }
            },
            {
              name: 'getValueWithPromiseObjDefinedSomewhereElse',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'PromiseTypeAnnotation' },
                params: []
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_ROOT_TAG 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getRootTag',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: {
                  type: 'ReservedFunctionValueTypeAnnotation',
                  name: 'RootTag'
                },
                params: [
                  {
                    name: 'rootTag',
                    optional: false,
                    typeAnnotation: {
                      type: 'ReservedFunctionValueTypeAnnotation',
                      name: 'RootTag'
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;

exports[`RN Codegen Flow Parser can generate fixture NATIVE_MODULE_WITH_SIMPLE_OBJECT 1`] = `
"{
  modules: {
    NativeSampleTurboModule: {
      nativeModules: {
        SampleTurboModule: {
          aliases: {},
          properties: [
            {
              name: 'getObject',
              optional: false,
              typeAnnotation: {
                type: 'FunctionTypeAnnotation',
                returnTypeAnnotation: { type: 'GenericObjectTypeAnnotation' },
                params: [
                  {
                    name: 'o',
                    optional: false,
                    typeAnnotation: { type: 'GenericObjectTypeAnnotation' }
                  }
                ]
              }
            }
          ]
        }
      }
    }
  }
}"
`;
